--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "validator": "^13.11.0",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
