--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
     "next": "14.1.1",
     "next-themes": "^0.2.1",
     "react": "^18",
