--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/validator": "^13.11.9",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
@@ -46,6 +50,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
