--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
     "next": "14.1.1",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
