--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^1.4.11",
     "@types/validator": "^13.11.9",
+    "@uploadthing/react": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "crypto": "^1.0.1",
@@ -34,8 +37,10 @@
     "lucide-react": "^0.344.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.3.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -44,6 +49,7 @@
     "react-redux": "^9.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.6.0",
     "validator": "^13.11.0",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
