--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.28.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^1.4.11",
     "@types/validator": "^13.11.9",
     "@uploadthing/react": "^6.4.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.3",
