--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.28.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^1.4.11",
     "@types/validator": "^13.11.9",
