--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
@@ -67,6 +68,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.25",
     "@types/react": "^18",
