--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.24",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.4.0",
