--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.6.0",
