--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["@testing-library/jest-dom", "@types/mongoose"],
+    "types": ["@testing-library/jest-dom"],
     "plugins": [
       {
         "name": "next"
