--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
+    "stripe:listen": "stripe listen ---forward-to localhost:3000/api/order/webhook",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watchAll"
@@ -68,6 +69,7 @@
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "sonner": "^1.4.41",
+    "stripe": "^15.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.6.0",
