--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack/react-query": "^5.28.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^1.4.11",
+    "@types/stripe-v3": "^3.1.33",
     "@types/validator": "^13.11.9",
     "@uploadthing/react": "^6.4.0",
     "axios": "^1.6.8",
