--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
-    "next": "14.1.1",
+    "next": "^14.1.0",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.4.0",
     "next-themes": "^0.2.1",
