--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -60,7 +61,7 @@
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "next": "^14.1.0",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.17",
     "next-cloudinary": "^6.4.0",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -96,6 +97,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5"
