--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "resend": "^3.2.0",
     "sonner": "^1.4.41",
     "stripe": "^15.1.0",
     "tailwind-merge": "^2.2.1",
