--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.6.0",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
@@ -89,6 +90,7 @@
     "@types/node": "^20.11.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
