--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "next-auth": "^5.0.0-beta.17",
     "next-cloudinary": "^6.4.0",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
