--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "^0.0.17",
+    "@react-email/tailwind": "^0.0.16",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.28.9",
     "@types/bcryptjs": "^2.4.6",
@@ -65,6 +67,7 @@
     "next-cloudinary": "^6.4.0",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.12",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
