finish the contact us page

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev ",
+    "dev": "next dev",
+    "email:dev": "email dev --dir src/emails",
     "build": "next build",
     "start": "next start",
     "stripe:listen": "stripe listen ---forward-to localhost:3000/api/checkout/webhook",
@@ -71,6 +72,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-email": "^2.1.2",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
