fix the firstBatch type error in search route and remove testing packages

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:testing-library/react",
-    "plugin:jest-dom/recommend"
-  ]
+  "extends": ["next/core-web-vitals"]
 }
