--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "email:dev": "email dev --dir src/emails",
     "build": "next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "stripe:listen": "stripe listen ---forward-to localhost:3000/api/checkout/webhook",
     "lint": "next lint",
