--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "resend": "^3.2.0",
+    "slugify": "^1.6.6",
     "sonner": "^1.4.41",
     "stripe": "^15.1.0",
     "tailwind-merge": "^2.2.1",
