--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "resend": "^3.2.0",
+    "sharp": "^0.33.4",
     "slugify": "^1.6.6",
     "sonner": "^1.4.41",
     "stripe": "^15.1.0",
